--- a/style.css
+++ b/style.css
@@ -1,13 +1,59 @@
-html {
+/* --BG Image on index page-- */
 
-    text-align: center;
+
+.containertop {
+  background-color: #00a8ff;
+  background: url('assets/images/cooselake1.jpg') no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+
+.col2 {
+  height: 250px;
+  margin-top: 100px
+}
+
+/* --Welcome Text on index page-- */
+
+.content {
+  position: relative;
+  text-transform: uppercase;
+  text-align: center;
 
 }
 
-@media only screen and (max-width: 600px) {
-    body {
-      background-color: lightblue;
-    }
-  }
+.content p {
+  color: #fafafa;
+  font-size: 20px;
+  letter-spacing:8px;
+  padding-bottom: 10px;
+  font-weight: 600;
+}
 
-  
+.content a {
+  color: #FFCCCB;
+  font-size: 20px;
+  letter-spacing:8px;
+  padding-bottom: 10px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.content span {
+  color: #fafafa;
+  font-size: 15px;
+  letter-spacing:8px;
+  padding-bottom: 10px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 500px) {
+  .content span {
+    
+    font-size: 6px;
+    
+}
